# earningtrader

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.dev.txt  requirements.prod.txt
.github/actions/python_dependencies/: action.yaml
.github/actions/python_test/: action.yaml
.github/workflows/: python_publish.yaml  python_push.yaml  python_test.yaml
docs/examples/: bern_ts_simulation.ipynb
src/earningtrader/controller/: bernoulli_ts_simulator.py
src/rl_trader/common/: decorators.py
src/rl_trader/common/interface/: _component.py
src/rl_trader/component/_logger/: _interface.py  _python.py
src/rl_trader/controller/: _interface.py  bernoulli_ts_simulator.py
src/rl_trader/data/acquisition/: _interface.py  yfinance.py
src/rl_trader/data/preprocessing/: _interface.py  preprocessor.py
src/rl_trader/interface/: __init__.py
src/rl_trader/model/: _interface.py  bernoulli_ts.py
src/rl_trader/storage/: _interface.py  shelve_storage.py
src/rl_trader/trader/: _interface.py  simulation_trader.py
tests/common/: test_decorators.py
tests/controller/: test_bernoulli_ts.py
tests/data/: test_data_acquisition.py  test_preprocessor.py
tests/integration/: test_bern_ts_simulator.py
tests/logger/: test_python_file_logger.py
tests/model/: test_bernoulli_ts.py
tests/storage/: test_shelve.py
