[project]
name = "rl-trader"
version = "0.0.0"
description = "A trading platform based on the Reinforcement Learning framework"
authors = [
    {name = "UponTheSky", email = "sailing.to.orbis@gmail.com"},
]
dependencies = [
    "yfinance>=0.2.27",
]
requires-python = ">=3.9"
readme = "README.md"
# currently it is not an open source, so we won't have any license

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.0",
]
lint = [
    "ruff>=0.0.282",
]
format = [
    "black>=23.7.0",
]
